--- a/index.html
+++ b/index.html
@@ -3,26 +3,48 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Soccer Stats</title>
-        <link rel="stylesheet" href="styles.css" />
+        <title>Soccer Stats - Inicio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+        />
+
+        <link rel="stylesheet" href="styles/main.css" />
     </head>
     <body>
         <header class="header">
-            <div class="logo">SportBoard</div>
-            <nav class="nav">
-                <a href="#" class="active">Inicio</a>
-                <a href="#">Equipos</a>
-                <a href="#">Partidos</a>
-                <a href="#">Noticias</a>
+            <div class="logo">Sport Board</div>
+            <button
+                class="hamburger"
+                aria-label="Abrir menú"
+                aria-controls="main-nav"
+                aria-expanded="false"
+                onclick="toggleMenu()"
+            >
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav class="nav" id="main-nav">
+                <a href="index.html" class="active">Inicio</a>
+                <a href="team-stats.html">Equipos</a>
+                <a href="player-stats.html">Jugadores</a>
+                <a href="competition-stats.html">Competencias</a>
+                <a href="live-match.html">En Vivo</a>
             </nav>
             <div class="user-avatar">JD</div>
         </header>
+
         <div class="container">
             <h1 class="page-title">Resumen del Equipo</h1>
+
             <div class="tabs">
                 <a href="#" class="tab active">Estadísticas de Equipo</a>
                 <a href="#" class="tab">Todos</a>
             </div>
+
             <div class="team-image">
                 <div class="team-players">
                     <div class="player">
@@ -43,6 +65,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="stats-grid">
                 <div class="stat-card">
                     <h3>Resultados Recientes</h3>
@@ -63,6 +86,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="section">
                 <h2>Resultados Recientes</h2>
                 <table id="recent-results">
@@ -99,24 +123,10 @@
                             <td class="team-name">Equipo E</td>
                             <td><span class="result victory">2-1 (V)</span></td>
                         </tr>
-                        <tr>
-                            <td>5 de abril</td>
-                            <td class="team-name">Equipo F</td>
-                            <td><span class="result victory">4-0 (V)</span></td>
-                        </tr>
-                        <tr>
-                            <td>12 de abril</td>
-                            <td class="team-name">Equipo G</td>
-                            <td><span class="result draw">2-2 (E)</span></td>
-                        </tr>
-                        <tr>
-                            <td>19 de abril</td>
-                            <td class="team-name">Equipo H</td>
-                            <td><span class="result defeat">1-3 (D)</span></td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
+
             <div class="section">
                 <h2>Clasificación en la Liga</h2>
                 <table id="league-table">
@@ -128,7 +138,21 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- El contenido se genera dinámicamente -->
+                        <tr>
+                            <td><span class="position-number">1</span></td>
+                            <td class="team-name">Equipo X</td>
+                            <td class="points">60</td>
+                        </tr>
+                        <tr>
+                            <td><span class="position-number">2</span></td>
+                            <td class="team-name">Equipo Y</td>
+                            <td class="points">58</td>
+                        </tr>
+                        <tr>
+                            <td><span class="position-number">3</span></td>
+                            <td class="team-name">Equipo Z</td>
+                            <td class="points">55</td>
+                        </tr>
                     </tbody>
                 </table>
                 <div class="pagination">
@@ -145,6 +169,33 @@
                 </div>
             </div>
         </div>
-        <script src="main.js"></script>
+
+        <script src="scripts/main.js"></script>
+        <script>
+            function toggleMenu() {
+                const nav = document.getElementById("main-nav");
+                const btn = document.querySelector(".hamburger");
+                const expanded = btn.getAttribute("aria-expanded") === "true";
+                nav.classList.toggle("open");
+                btn.setAttribute("aria-expanded", !expanded);
+                document.body.style.overflow = nav.classList.contains("open")
+                    ? "hidden"
+                    : "";
+            }
+            // Cerrar menú al hacer click fuera en móviles
+            window.addEventListener("click", function (e) {
+                const nav = document.getElementById("main-nav");
+                const btn = document.querySelector(".hamburger");
+                if (
+                    nav.classList.contains("open") &&
+                    !nav.contains(e.target) &&
+                    !btn.contains(e.target)
+                ) {
+                    nav.classList.remove("open");
+                    btn.setAttribute("aria-expanded", false);
+                    document.body.style.overflow = "";
+                }
+            });
+        </script>
     </body>
 </html>
